infra/modules/k3s_node/manifests/06-nats.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nats
