infra/modules/k3s_node/manifests/13-fluent-bit.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
