infra/modules/k3s_node/manifests/14-victoria-metrics.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
